fixed white space on home page, and added padding to all the page section for proper proportions

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10599,8 +10599,16 @@ form .row:first-child .floating-label-form-group {
 }
 
 .portfolio {
-  padding-top: 6rem;
-  padding-bottom: 4.5rem;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.padding_top {
+  padding-top: 75px;
+}
+
+.padding_bottom {
+  padding-bottom: 75px;
 }
 
 .page-section-heading {
@@ -10636,8 +10644,8 @@ form .row:first-child .floating-label-form-group {
 }
 
 .block {
-  display:block;
-  margin-right:5px;
+  display: block;
+  margin-right: 5px;
   padding: 6px 12px;
   font-size: 1rem;
   font-weight: 400;
@@ -10650,30 +10658,44 @@ form .row:first-child .floating-label-form-group {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
+.block2 {
+  display: block;
+  margin-right: 5px;
+  padding: 6px 12px;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  /* color: #495057;
+  background-color: #fff; */
+  background-clip: padding-box;
+  /* border: 0.125rem solid #ced4da;
+  border-radius: 0.5rem; */
+  /* transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
+}
+
 #creatAccBtn {
   max-width: 13.5rem;
-  
 }
 #loginAccBtn {
   max-width: 13.5rem;
 }
 #regPass {
   max-width: 13.5rem;
-  display:block;
-  margin-top: 8px; 
+  display: block;
+  margin-top: 8px;
 }
 #regUser {
   width: 13.5rem;
-  display:block;
+  display: block;
   align-items: center;
   justify-content: center;
   color: rgb(0, 0, 0);
   display: block;
 }
 #loginBtn:hover {
-background-color: #1f2d41;
-font-size: small;
-color: white;
+  background-color: #1f2d41;
+  font-size: small;
+  color: white;
 }
 #loginBtn {
   font-size: small;
@@ -10683,9 +10705,9 @@ color: white;
 }
 #username {
   width: 125px;
-  margin-right:5px;
+  margin-right: 5px;
   padding: 6px 12px;
-  font-size: .8rem;
+  font-size: 0.8rem;
   font-weight: 400;
   line-height: 1.5;
   color: #495057;
@@ -10697,9 +10719,9 @@ color: white;
 }
 #password {
   width: 125px;
-  margin-right:5px;
+  margin-right: 5px;
   padding: 6px 12px;
-  font-size: .8rem;
+  font-size: 0.8rem;
   font-weight: 400;
   line-height: 1.5;
   color: #495057;
@@ -10734,8 +10756,8 @@ color: white;
 }
 #creatModalBtn:hover {
   background-color: #1f2d41;
-/* font-size: small; */
-color: white;
+  /* font-size: small; */
+  color: white;
 }
 
 #congrat {
